@@ -1,5 +1,8 @@
 2009-04-17  Martin Leidig  <mleidig@schlund.de>
 
+	Made deref-service configuration element optional and set mustsign to
+	true by default.
+
 	Fixed NPE occurring when edit mode is disabled and no TestRecording
 	bean is registered/configured.
 
